--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     h2 {
       text-align: center;
     }
-    input[type="file"] {
+    input[type="file"], input[type="date"] {
       display: block;
-      margin: 20px auto;
+      margin: 10px auto;
     }
     table {
       width: 90%;
-      margin: 0 auto;
+      margin: 20px auto;
       border-collapse: collapse;
       background: #fff;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -36,81 +36,76 @@
     tr:nth-child(even) {
       background-color: #f2f2f2;
     }
-    #login {
-      text-align: center;
-      margin-top: 100px;
-    }
-    #passwordInput {
-      padding: 10px;
-      font-size: 16px;
-    }
-    #submitBtn {
-      padding: 10px 20px;
-      font-size: 16px;
-    }
   </style>
 </head>
 <body>
 
-<div id="login">
-  <h2>Enter Password to View Report</h2>
-  <input type="password" id="passwordInput" placeholder="Enter Password">
-  <button id="submitBtn">Submit</button>
-</div>
-
-<div id="report" style="display:none;">
   <h2>Retailer Wise SIM Sale Report</h2>
   <input type="file" id="upload" accept=".xlsx, .xls" />
+  <label for="dateFilter" style="text-align:center; display:block;">Select Date:</label>
+  <input type="date" id="dateFilter" />
 
   <table id="resultTable">
     <thead>
       <tr>
         <th>Retailer Name</th>
-        <th>SIM Sale Count</th>
+        <th>MNP Count</th>
+        <th>SIM Replacement Count</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
-</div>
 
-<script>
-  document.getElementById('submitBtn').addEventListener('click', function() {
-    const enteredPassword = document.getElementById('passwordInput').value;
-    if (enteredPassword === "007272") {
-      document.getElementById('login').style.display = "none";
-      document.getElementById('report').style.display = "block";
-    } else {
-      alert("Incorrect password!");
-    }
-  });
+  <script>
+    let rawData = [];
 
-  document.getElementById('upload').addEventListener('change', function(e) {
-    const file = e.target.files[0];
-    const reader = new FileReader();
+    document.getElementById('upload').addEventListener('change', function(e) {
+      const file = e.target.files[0];
+      const reader = new FileReader();
 
-    reader.onload = function(event) {
-      const data = new Uint8Array(event.target.result);
-      const workbook = XLSX.read(data, { type: 'array' });
-      const sheet = workbook.Sheets[workbook.SheetNames[0]];
-      const json = XLSX.utils.sheet_to_json(sheet);
+      reader.onload = function(event) {
+        const data = new Uint8Array(event.target.result);
+        const workbook = XLSX.read(data, { type: 'array' });
+        const sheet = workbook.Sheets[workbook.SheetNames[0]];
+        rawData = XLSX.utils.sheet_to_json(sheet);
+        displayData();
+      };
 
+      reader.readAsArrayBuffer(file);
+    });
+
+    document.getElementById('dateFilter').addEventListener('change', displayData);
+
+    function displayData() {
+      const dateFilter = document.getElementById('dateFilter').value;
       const countMap = {};
-      json.forEach(row => {
-        const name = row['Retailer Name'] || 'Unknown';
-        countMap[name] = (countMap[name] || 0) + 1;
+
+      rawData.forEach(row => {
+        const retailer = row['Retailer Name'] || 'Unknown';
+        const type = (row['Type of CAF'] || '').toUpperCase();
+        const date = row['Date'] ? new Date(row['Date']).toISOString().split('T')[0] : null;
+
+        if (!dateFilter || date === dateFilter) {
+          if (!countMap[retailer]) {
+            countMap[retailer] = { MNP: 0, SIM_REPLACEMENT: 0 };
+          }
+
+          if (type.includes('MNP')) {
+            countMap[retailer].MNP += 1;
+          } else if (type.includes('SIM REPLACEMENT')) {
+            countMap[retailer].SIM_REPLACEMENT += 1;
+          }
+        }
       });
 
       const tbody = document.querySelector('#resultTable tbody');
       tbody.innerHTML = '';
 
-      Object.entries(countMap).forEach(([name, count]) => {
-        const row = `<tr><td>${name}</td><td>${count}</td></tr>`;
+      Object.entries(countMap).forEach(([name, counts]) => {
+        const row = `<tr><td>${name}</td><td>${counts.MNP}</td><td>${counts.SIM_REPLACEMENT}</td></tr>`;
         tbody.insertAdjacentHTML('beforeend', row);
       });
-    };
-
-    reader.readAsArrayBuffer(file);
-  });
-</script>
+    }
+  </script>
 </body>
 </html>
