--- a/index.html
+++ b/index.html
@@ -2,59 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Retailer Wise SIM Sale</title>
+  <title>SIM Sale Report</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background: #f4f4f4;
       padding: 20px;
-      background: #f9f9f9;
+    }
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 5px 25px rgba(0,0,0,0.1);
     }
     h2 {
       text-align: center;
+      color: #2c3e50;
     }
-    input[type="file"], input[type="date"] {
+    input[type="file"] {
       display: block;
-      margin: 10px auto;
+      margin: 20px auto;
+      padding: 10px;
     }
     table {
-      width: 90%;
-      margin: 20px auto;
+      width: 100%;
+      margin-top: 20px;
       border-collapse: collapse;
-      background: #fff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     th, td {
-      padding: 10px;
       border: 1px solid #ccc;
+      padding: 10px;
       text-align: center;
     }
     th {
-      background-color: #007BFF;
+      background-color: #3498db;
       color: white;
     }
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
+    tr.retailer-row {
+      background-color: #dff9fb;
+      font-weight: bold;
+    }
+    .date-heading {
+      background-color: #ffeaa7;
+      font-weight: bold;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const correctPassword = "007272";
+      let input = prompt("Enter password to view the report:");
+      if (input !== correctPassword) {
+        document.body.innerHTML = '<h2 style="color:red;text-align:center">Access Denied</h2>';
+      }
+    });
+  </script>
 
-  <h2>Retailer Wise SIM Sale Report</h2>
-  <input type="file" id="upload" accept=".xlsx, .xls" />
-  <label for="dateFilter" style="text-align:center; display:block;">Select Date:</label>
-  <input type="date" id="dateFilter" />
-
-  <table id="resultTable">
-    <thead>
-      <tr>
-        <th>Retailer Name</th>
-        <th>MNP Count</th>
-        <th>SIM Replacement Count</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div class="container">
+    <h2>SIM Sale Report (Type-wise Count)</h2>
+    <input type="file" id="upload" accept=".xlsx, .xls" />
+    <div id="tableContainer"></div>
+  </div>
 
   <script>
     let rawData = [];
@@ -74,36 +87,59 @@
       reader.readAsArrayBuffer(file);
     });
 
-    document.getElementById('dateFilter').addEventListener('change', displayData);
-
     function displayData() {
-      const dateFilter = document.getElementById('dateFilter').value;
-      const countMap = {};
+      const grouped = {};
+      const cafTypesSet = new Set();
 
       rawData.forEach(row => {
+        if (row['Activation Status'] && row['Activation Status'].toLowerCase() === 'cancelled') return;
+
+        const date = row['Date'] ? new Date(row['Date']).toLocaleDateString() : 'Unknown';
         const retailer = row['Retailer Name'] || 'Unknown';
         const type = (row['Type of CAF'] || '').toUpperCase();
-        const date = row['Date'] ? new Date(row['Date']).toISOString().split('T')[0] : null;
+        cafTypesSet.add(type);
 
-        if (!dateFilter || date === dateFilter) {
-          if (!countMap[retailer]) {
-            countMap[retailer] = { MNP: 0, SIM_REPLACEMENT: 0 };
-          }
+        if (!grouped[date]) grouped[date] = {};
+        if (!grouped[date][retailer]) grouped[date][retailer] = {};
 
-          if (type.includes('MNP')) {
-            countMap[retailer].MNP += 1;
-          } else if (type.includes('SIM REPLACEMENT')) {
-            countMap[retailer].SIM_REPLACEMENT += 1;
-          }
-        }
+        if (!grouped[date][retailer][type]) grouped[date][retailer][type] = 0;
+        grouped[date][retailer][type]++;
       });
 
-      const tbody = document.querySelector('#resultTable tbody');
-      tbody.innerHTML = '';
+      const cafTypes = Array.from(cafTypesSet);
+      const container = document.getElementById('tableContainer');
+      container.innerHTML = '';
 
-      Object.entries(countMap).forEach(([name, counts]) => {
-        const row = `<tr><td>${name}</td><td>${counts.MNP}</td><td>${counts.SIM_REPLACEMENT}</td></tr>`;
-        tbody.insertAdjacentHTML('beforeend', row);
+      Object.keys(grouped).forEach(date => {
+        let html = `<h3 class='date-heading'>${date}</h3>`;
+        html += '<table><thead><tr><th>Retailer Name</th>';
+        cafTypes.forEach(type => {
+          html += `<th>${type}</th>`;
+        });
+        html += '<th>Total</th></tr></thead><tbody>';
+
+        const totals = new Array(cafTypes.length).fill(0);
+        let grandTotal = 0;
+
+        Object.keys(grouped[date]).forEach(retailer => {
+          html += `<tr class='retailer-row'><td>${retailer}</td>`;
+          let rowTotal = 0;
+          cafTypes.forEach((type, i) => {
+            const count = grouped[date][retailer][type] || 0;
+            rowTotal += count;
+            totals[i] += count;
+            html += `<td>${count}</td>`;
+          });
+          grandTotal += rowTotal;
+          html += `<td>${rowTotal}</td></tr>`;
+        });
+
+        html += '<tr><th>Total</th>';
+        totals.forEach(t => html += `<th>${t}</th>`);
+        html += `<th>${grandTotal}</th></tr>`;
+        html += '</tbody></table>';
+
+        container.innerHTML += html;
       });
     }
   </script>
