--- a/index.html
+++ b/index.html
@@ -285,7 +285,9 @@
     });
   </script>
 </body>
-</html><!DOCTYPE html>
+</html> 
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -494,5 +496,6 @@
 </html><p><p style="color: black; font-family: Arial;">
   Designed by Ashish Mishra <span style="color: red;">&#10084;</span>
 </p>
+
 
 
